# gdrive-git-sync

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
functions/: config.py  docx_preprocess.py  drive_client.py  git_ops.py  main.py  pandoc_postprocess.py  requirements.txt  state_manager.py  sync_engine.py  text_extractor.py
infra/: firestore.tf  functions.tf  iam.tf  outputs.tf  providers.tf  scheduler.tf  secrets.tf  variables.tf
notes/: revert-feature-plan.md
scripts/: bootstrap.sh  deploy.sh  lib.sh  setup.sh  verify.sh
tests/: conftest.py  test_docx_preprocess.py  test_drive_client.py  test_git_ops.py  test_main.py  test_pandoc_postprocess.py  test_state_manager.py  test_sync_engine.py  test_text_extractor.py
tests/shell/: lib.bats  setup_dryrun.bats
tests/shell/test_helper/: common_setup.bash
